Grid is now no longer visible

--- a/CSS/master.css
+++ b/CSS/master.css
@@ -144,16 +144,16 @@ li a {
 }
 
 [class*="col-"] {
-  background-color: rgba(45, 157, 192, 0.2);
-  border: 1px solid #2d9dc0;
+  /*background-color: rgba(45, 157, 192, 0.2);
+  border: 1px solid #2d9dc0;*/
   padding: 16px;
-  width: 100%;
+  width: 100%;*/
 }
 
 @media screen and (min-width: 600px) {
   [class*="col-"] {
-    background-color: rgba(242, 33, 56, 0.2);
-    border: 1px solid rgba(249, 38, 114, 1);
+    /*background-color: rgba(242, 33, 56, 0.2);
+    border: 1px solid rgba(249, 38, 114, 1);*/
   }
   .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
